[update] message of the update button

--- a/config/locales/activerecord.fr.yml
+++ b/config/locales/activerecord.fr.yml
@@ -168,7 +168,7 @@ fr:
     submit:
       create: Créer un compte
       submit: Enregistrer ce(tte) %{model}
-      update: Modifier ce(tte) %{model}
+      update: Modifier mon compte
   number:
     currency:
       format:
